# WhoNeedsGV

./: .gitignore  LICENSE  README.md
Visualizer_227694/: Cargo.toml
Visualizer_227694/.cargo/: config.toml
Visualizer_227694/src/: ai_226840_mirto_goal.rs  ai_226840_mirto_robot.rs  ai_226840_woodworker_goal.rs  ai_226930_coin_collection.rs  ai_226930_main.rs  ai_226930_print.rs  ai_226930_scare_crow_killing.rs  assets_loader.rs  camera.rs  game_data.rs  gui_overlay.rs  main.rs  movement.rs  robot.rs  rudimental_a_i.rs  user_inputs.rs  weather.rs  world.rs
Visualizer_227694/src/ai_226840/: woodworker_goal.rs
Visualizer_228097/: Cargo.toml
Visualizer_228097/src/: components.rs  connect_with_ai.rs  main.rs  note  runner.rs  states.rs  systems.rs
Visualizer_228097/src/ai_226840/: mirto_goal.rs  mod.rs  woodworker_goal.rs
Visualizer_228097/src/ai_226930/: coin_collection.rs  mod.rs  print.rs  scare_crow_killing.rs
Visualizer_228097/src/backpack/: component.rs  mod.rs  systems.rs
Visualizer_228097/src/energy/: components.rs  mod.rs  systems.rs
Visualizer_228097/src/meteo/: mod.rs  systems.rs
Visualizer_228097/src/robot/: mod.rs  systems.rs
Visualizer_228097/src/stats/: mod.rs  systems.rs
Visualizer_228097/src/ui/: backpack_menu.rs  environment_stats_menu.rs  game_stats_menu.rs  grid.rs  layout.rs  log.rs  mod.rs  robot_stats_menu.rs
Visualizer_228097/src/world/: mod.rs  systems.rs
ai_226840/: Cargo.toml
ai_226840/src/: main.rs  mirto_goal.rs  woodworker_goal.rs
my_app/: Cargo.toml
my_app/.cargo/: config.toml
my_app/src/: main.rs
my_app/src/ai_226840/: mirto_goal.rs  mod.rs  woodworker_goal.rs
my_app/src/ai_226930/: coin_collection.rs  mod.rs  print.rs  scare_crow_killing.rs
my_app/src/test_tool/: mod.rs
my_app/src/visualizer_227694/: assets_loader.rs  camera.rs  game_data.rs  gui_overlay.rs  mod.rs  movement.rs  robot.rs  rudimental_a_i.rs  user_inputs.rs  weather.rs  world.rs
my_app/src/visualizer_228097/: components.rs  connect_with_ai.rs  events.rs  mod.rs  runner.rs
my_app/src/visualizer_228097/backpack/: mod.rs  systems.rs
my_app/src/visualizer_228097/energy/: mod.rs  systems.rs
my_app/src/visualizer_228097/meteo/: components.rs  mod.rs  systems.rs
my_app/src/visualizer_228097/robot/: mod.rs  systems.rs
my_app/src/visualizer_228097/stats/: components.rs  mod.rs  systems.rs
my_app/src/visualizer_228097/ui/: backpack_menu.rs  components.rs  environment_stats_menu.rs  game_stats_menu.rs  grid.rs  layout.rs  log.rs  robot_stats_menu.rs
my_app/src/visualizer_228097/world/: components.rs  mod.rs  systems.rs
my_app/static/: index.html  styles.css  visualizer.js  visualizer.ts
snipet_giulio/: Cargo.toml
snipet_giulio/src/: main.rs
snipet_giulio/src/ai_226840/: mirto_goal.rs  mod.rs  woodworker_goal.rs
test_tool/: Cargo.toml
test_tool/src/: main.rs  maze_world_gen.rs
test_wg/: Cargo.toml
test_wg/src/: main.rs
test_wg/static/: index.html  script.js  script.ts  scriptjs.js  style.css
