[package]
name = "ai_226840"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
queues = "1.0.2"
robotics_lib = {version = "0.1.21", registry = "kellnr"}
rustici_planner = {version = "0.1.5", registry = "kellnr"}
spyglass = {version = "0.1.1", registry = "kellnr"}
rust_and_furious_dynamo = {version = "0.1.2", registry = "kellnr"}
op_map = {version = "1.0.5", registry = "kellnr"}
oxagaudiotool = {version = "0.2.0", registry = "kellnr"}
ohcrab_weather = {version = "0.1.2", registry = "kellnr"}
ohcrab_collection = {version = "0.1.5", registry = "kellnr"}
rip_worldgenerator = {version = "0.5.54", registry = "kellnr"}
colored = "2.1.0"