[package]
name = "test_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
robotics_lib = { git = "https://github.com/Advanced-Programming-2023/Robotic-Lib" }
tool = { git = "https://github.com/Advanced-Programming-Carasau-Project/tool.git" }
