[package]
name = "test_wg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.4", features = ["json"] }
serde = { version = "1", features = ["derive"] }
robotics_lib = { git = "https://github.com/Advanced-Programming-2023/Robotic-Lib" }
who_needs_gv_world_generator = { git = "https://github.com/Advanced-Programming-Carasau-Project/world_generator.git" }
