[package]
name = "test_wg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.4", features = ["json"] }
serde = { version = "1", features = ["derive"] }
robotics_lib = {version = "0.1.21", registry = "kellnr"}
who_needs_gv_world_generator = { path = "./world_generator" }
